--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <h2>Notas Rápidas de Matemática</h2>
     </div>
     <div class="mudar">
-      <h2>MATEMÁTICA INTERMEDIÁRIA</h2>
+      <h2>MATEMÁTICA BÁSICA</h2>
     </div>
-    <p>Este é um conjunto de flashcards para revisar conceitos importantes de matemática intermediária. Perfeito para fixar e praticar!</p>
+    <p>Este é um conjunto de flashcards para revisar conceitos importantes de matemática. Com intuito defixar e praticar!</p>
   </header>
 
   <main>
@@ -214,10 +214,10 @@
 
   <footer>
     <div class="footer-text">
-      <a class="texto-rodape">Projeto desenvolvido pela Alura. Adaptado por Rafael K.T Nakatsuchi.</a>
+      <a class="texto-rodape">Projeto desenvolvido pela Alura. Adaptado por Ana Carolina P. da Mata ;]</a>
     </div>
     <div class="mark">
-      <a href="https://github.com/RafaNaka33">2025 | @RafaNaka</a>
+      <a href="https://github.com/anacpdm">2025 | @anacpdm</a>
     </div>
   </footer>
 </body>
